# gludconfig

./: Cargo.toml  PKGBUILD  readme.md
glud_macros/: Cargo.toml
glud_macros/src/: generate_code.rs  lib.rs  schema.rs
gludconfig/: FETCH_HEAD  config  packed-refs
gludconfig/objects/pack/: pack-60a281bb510a599437cb416c7167e329fc39c0e4.idx  pack-60a281bb510a599437cb416c7167e329fc39c0e4.pack  pack-60a281bb510a599437cb416c7167e329fc39c0e4.rev
gsd_macros/: Cargo.toml
gsd_macros/src/: generate_code.rs  lib.rs  schema.rs
migrations/: latest.sql
src/: error.rs  lib.rs  main.rs  property.rs  schema.rs  storage.rs  storage_backend.rs  trigger.rs  value.rs
src/impls/: mod.rs  rustqlite.rs
