[package]
name = "gsd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
async-rusqlite = { version = "0.4.0", optional = true }
async-trait = { version = "0.1.74", optional = true }
bpaf = { version = "0.9.5", features = [
    "derive",
    "autocomplete",
], optional = true }
byteorder = { version = "1.5.0", optional = true }
gsd_macros = { version = "0.1.0", path = "gsd_macros", optional = true }
homedir = { version = "0.2.1", optional = true }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = [
    "macros",
    "sync",
    "process",
    "rt-multi-thread",
], optional = true }
zvariant = "3.15.0"
zbus = { version = "3.14.1", features = ["tokio"], optional = true }
nix = { version = "0.27.1", default-features = false, optional = true, features = [
    "fs",
] }
futures-util = { version = "0.3.28", optional = true }

[features]
tests = ["macros", "dbus"]
cli = ["dep:tokio", "dep:bpaf"]
macros = ["dep:gsd_macros"]
dbus = [
    "dep:tokio",
    "dep:zbus",
    "dep:futures-util",
    "dep:async-rusqlite",
    "dep:byteorder",
    "dep:nix",
    "dep:homedir",
    "dep:async-trait",
]
